--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,9 @@ dependencies {
     implementation "com.android.support:cardview-v7:$support_version"
     implementation project(path: ':mylibrary')
     implementation files('libs/EasyAR.jar')
-    implementation("com.github.hotchemi:permissionsdispatcher:3.2.0") {
-        // if you don't use android.app.Fragment you can exclude support for them
-        exclude module: "support-v13"
-    }
-    annotationProcessor "com.github.hotchemi:permissionsdispatcher-processor:3.2.0"
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
 }
 repositories {
     mavenCentral()
